GNOME Bugzilla – Bug 614293
[ShellGenericContainer] Missing calls to st_theme_node_adjust_preferred_width/height
Last modified: 2010-03-31 14:10:54 UTC
the get_preferred_width/height functions in ShellGenericContainer seem to only be half adjusting for theme borders. === static void shell_generic_container_get_preferred_width (ClutterActor *actor, gfloat for_height, gfloat *min_width_p, gfloat *natural_width_p) { ShellGenericContainerAllocation *alloc = g_slice_new0 (ShellGenericContainerAllocation); StThemeNode *theme_node = st_widget_get_theme_node (ST_WIDGET (actor)); st_theme_node_adjust_for_height (theme_node, &for_height); alloc->_refcount = 1; g_signal_emit (G_OBJECT (actor), shell_generic_container_signals[GET_PREFERRED_WIDTH], 0, for_height, alloc); if (min_width_p) *min_width_p = alloc->min_size; if (natural_width_p) *natural_width_p = alloc->natural_size; shell_generic_container_allocation_unref (alloc); } ===
Created attachment 157492 [details] [review] ShellGenericContainer: adjust requested height/width for border/padding The only place this currently affects anything is the altTabPopup, but there's no visible effect there since the popup gets allocated much more space than it actually needs anyway
Review of attachment 157492 [details] [review]: Looks good
Attachment 157492 [details] pushed as 8dd572d - ShellGenericContainer: adjust requested height/width for border/padding