ShellGenericContainer: adjust requested height/width for border/padding

https://bugzilla.gnome.org/show_bug.cgi?id=614293